--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>CucumberDemo</groupId>
-  <artifactId>CucumberDemo</artifactId>
+  <groupId>ExchangeRate</groupId>
+  <artifactId>HSBC</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>CucumberDemo</name>
+  <name>ExchangeRate-HSBC</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -103,5 +103,23 @@
   		<artifactId>commons-io</artifactId>
   		<version>1.3.2</version>
   	</dependency>
+  	<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.13.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
   </dependencies>
 </project>
